front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antcv-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: antcv
  template:
    metadata:
      name: antcv-front
      labels:
        app: antcv
    spec:
      containers:
        - name: antcv-front
          image: xtaoistzz8t/antcv_frontend
---
apiVersion: v1
kind: Service
metadata:
  name: antcv-front-service
spec:
  type: NodePort
  selector:
    app: antcv
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
